# terminal-agent

./: .gitignore  README.md  docker-compose.yml
agent/: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml
agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
agent/src/: __init__.py  main.py
agent/src/clients/: openai_client.py
agent/src/core/: config.py
agent/src/graphs/agent/: graph.py  interrupts.py  nodes.py  prompts.py  tools.py
agent/src/services/: coffee_service.py  coffee_service_base.py  coffee_service_clients.py  coffee_service_invoices.py  coffee_service_products.py  coffee_service_shipments.py
agent/src/utils/: add_human_in_the_loop.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  guidelines.mdc  project-requirements.md  pyproject.toml
backend/src/: __init__.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: adbdc7970282_create_init_migration_auto.py
backend/src/api/: app.py
backend/src/api/middleware/: api_key_middleware.py  test_api_key_middleware.py
backend/src/api/v1/: index.py
backend/src/api/v1/clients/: client_router.py  client_schemas.py
backend/src/api/v1/invoices/: invoice_router.py  invoice_schemas.py
backend/src/api/v1/products/: product_router.py  product_schemas.py
backend/src/api/v1/shipments/: shipment_router.py  shipment_schemas.py
backend/src/core/: config.py
backend/src/db/: __init__.py  base.py
backend/src/db/alembic/: env.py
backend/src/db/alembic/versions/: adbdc7970282_create_init_migration_auto.py  c7d55fce2bef_create_base_products.py  fa116056110c_create_three_dummy_clients.py
backend/src/db/models/: __init__.py  client.py  invoice.py  product.py  shipment.py
docs/: roadmap.md
frontend/: package.json  prd.md
frontend/.cursor/rules/: frontend-developer.mdc
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/_components/: console-input.tsx  console-message.tsx  console-messages.tsx  console-welcome-message.tsx  console.tsx  invoice-table.tsx  products.tsx  recent-clients.tsx  shipment-tracker.tsx  system-status.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/design/: page.tsx
frontend/src/app/thread/: template.tsx
frontend/src/app/thread/[id]/: page.tsx
frontend/src/app/thread/new/: page.tsx
frontend/src/components/console/: console-message.tsx  console-welcome-message.tsx  console.tsx
frontend/src/components/primitives/: ChatMessage.tsx  ThreadChat.tsx
frontend/src/components/terminal/: ProductRotator.tsx  Terminal.tsx  TerminalChat.tsx  TerminalInput.tsx  TerminalInterrupt.tsx  TerminalLine.tsx  TerminalMessage.tsx
frontend/src/components/ui/: button.tsx  card.tsx  textarea.tsx
frontend/src/lib/: constants.ts
frontend/src/lib/services/: coffee-service.ts
