[project]
name = "agent"
version = "0.1.0"
description = "Agent for the Coffee Delivery Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.3.34",
]
packages = [
    { include = "src" },
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.2.7",
    "poethepoet>=0.34.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[tool.poe.tasks]
dev = "langgraph dev"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
    "D100"
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
