[project]
name = "backend"
version = "0.1.0"
description = "Backend for the Coffee Delivery Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.30.5",
    "poethepoet>=0.27.0",
]

[tool.poe.tasks]
dev = "uvicorn src.app:app --port 4000 --reload"
